chore: upgrade deps, remove figwheel from prod